chore(ci): fix ci, update oa3 and add github page documentation (#4)
* chore(ci): fix spelling and jobs in ci

* chore: update oa3 and add github page documentation

* chore: add swagger ui folder

* chore: fix schema
